--- a/style/pulseChart.less
+++ b/style/pulseChart.less
@@ -28,8 +28,6 @@
  * Imports external styles.
  * We compile it as a less file in order to wrap the external CSS rules.
  */
-// @import (less) "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.css";
-// @import (less) "node_modules/powerbi-visuals-utils-formattingutils/lib/index.css";
 
 @regularFontFamily: "Segoe UI", "wf_segoe-ui_normal", helvetica, arial, sans-serif;
 
@@ -93,5 +91,16 @@
     .animationNext,
     .animationToEnd {
         cursor: pointer;
+    }
+
+    .dot {
+        &:focus, &:focus-visible {
+            outline: none;
+        }
+
+        &:focus-visible {
+            stroke: rgb(0, 95, 204);
+            stroke-width: 2px;
+        }
     }
 }
